--- a/HA-HA system/HA-HA system/HA-HA system.vcxproj.filters
+++ b/HA-HA system/HA-HA system/HA-HA system.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="total-coomander.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="plan.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Installer.h">
@@ -51,6 +54,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="filesercher.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="plan.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
